welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:20: error: ';' expected but 'else' found.
	else {droite()
        ^